--- a/Assignment 1/reset.css
+++ b/Assignment 1/reset.css
@@ -22,3 +22,11 @@ ol,ul {
   line-style: none;
 }
 blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+table {
+   border-collapse: collapse;
+   border-spacing: 0;
+}
