--- a/Assignment 1/main.css
+++ b/Assignment 1/main.css
@@ -66,11 +66,11 @@ header nav .menuItem {
 
 /* The Line Container */
 .colouredLine {
-  display:flex;
-  height:1px;
-  width:100%;
-  padding-top:8px;
-  margin-left:-100%;
+  display: flex;
+  height: 1px;
+  width: 100%;
+  padding-top: 8px;
+  margin-left: -100%;
   transition:all .2s;
 }
 
@@ -355,3 +355,390 @@ section#banner
   opacity: 1;
   bottom: 20px;
    }
+
+   /* ==========================================================================
+    Testimonials
+    ========================================================================== */
+ #testimonials {
+   position: relative;
+   text-align: center;
+   padding: 140px 0;
+ }
+
+
+ #testimonials:before {
+   content: '';
+   display: block;
+   background-image: url(./images/testimonials_bg.png);
+   background-size: contain;
+   background-repeat: no-repeat;
+   width: 350px;
+   height: 300px;
+   position: absolute;
+   top: 30%;
+   left: 40%;
+   z-index: -1;
+ }
+
+
+ #testimonials h2 {
+   font-size: 35px;
+   text-transform: uppercase;
+   margin: 24px 0;
+ }
+
+
+ #testimonials p {
+   width: 800px;
+   margin: 0 auto;
+   line-height: 28px;
+ }
+
+
+ #testimonials #profile {
+   margin-top: 40px;
+ }
+
+
+ #testimonials #profile img {
+   margin-bottom: 10px;
+ }
+
+
+ #testimonials #profile h4 {
+   margin-bottom: 4px;
+ }
+
+
+ #testimonials #profile p {
+   color: grey;
+ }
+
+
+ /* ==========================================================================
+    Image Gallery
+    ========================================================================== */
+ #imageGallery {
+   height: 400px;
+   display: flex;
+ }
+
+
+ #imageGallery div {
+   position: relative;
+   width: 33.3%;
+   height: 100%;
+   overflow: hidden;
+   cursor: pointer;
+ }
+
+
+ #imageGallery div:before {
+   display: block;
+   position: absolute;
+   content: '';
+   width: 100%;
+   height: 100%;
+   background-size: contain;
+   transition: all .4s;
+ }
+
+
+ #imageGallery div:hover:before {
+   transform: scale(1.03);
+ }
+
+
+ #imageGallery div:nth-child(1):before {
+   background-image: url(./images/imageGallery1.jpeg);
+ }
+ #imageGallery div:nth-child(2):before {
+   background-image: url(./images/imageGallery2.jpeg);
+ }
+ #imageGallery div:nth-child(3):before {
+   background-image: url(./images/imageGallery3.jpeg);
+ }
+
+
+ #imageGallery div span {
+   position: absolute;
+   display: block;
+   width: 70%;
+   margin-left: 15%;
+   margin-top: 27%;
+   padding: 44px 0;
+   text-align: center;
+   background-color: grey;
+   font-size: 19px;
+   font-family: 'Alegreya', serif;
+   font-weight: 500;
+   letter-spacing: .165em;
+   color: white;
+   border-radius: 30px;
+   z-index: 2;
+ }
+
+
+ #imageGallery div:nth-child(1) span {
+   background-color: #8d8032;
+ }
+ #imageGallery div:nth-child(2) span {
+   background-color: #fceee7;
+   color: #a45e3f;
+ }
+ #imageGallery div:nth-child(3) span {
+   background-color: #662a01;
+ }
+
+
+ /* ==========================================================================
+    Products
+    ========================================================================== */
+ #products {
+   position: relative;
+   padding: 140px 0;
+   text-align: center;
+ }
+
+
+ /* Products Container's Borders */
+ #products .topBorder{
+   background-image: url(./images/product_top.jpeg);
+   width: 100%;
+   height: 8px;
+   position: absolute;
+   top: 0;
+   left: 0;
+ }
+ #products .rightBorder{
+   background-image: url(./images/product_right.jpeg);
+   height: 100%;
+   width: 8px;
+   position: absolute;
+   top: 0;
+   right: 0;
+ }
+ #products .bottomBorder{
+   background-image: url(./images/product_bottom.jpeg);
+   width: 100%;
+   height: 8px;
+   position: absolute;
+   bottom: 0;
+   left: 0;
+ }
+ #products .leftBorder{
+   background-image: url(./images/product_left.jpeg);
+   height: 100%;
+   width: 8px;
+   position: absolute;
+   top: 0;
+   left: 0;
+ }
+
+
+ #products h2 {
+   margin-top: 24px;
+   font-size: 35px;
+   text-transform: uppercase;
+ }
+
+
+ #productsDisplay {
+   display: flex;
+   justify-content: center;
+   gap: 40px;
+   margin-top: 40px;
+ }
+
+
+ #productsDisplay div img {
+   width: 300px;
+ }
+
+
+ #productsDisplay h4 {
+   font-size: 19px;
+   text-transform: uppercase;
+   margin-top: 40px;
+   margin-bottom: 10px;
+   font-weight: 400;
+ }
+
+
+ #productsDisplay p {
+   color: grey;
+   margin-bottom: 10px;
+ }
+
+
+ #productsDisplay span {
+   font-family: 'Alegreya', serif;
+   font-weight: 500;
+   letter-spacing: .165em;
+ }
+
+
+ /* ==========================================================================
+    Our Identity
+    ========================================================================== */
+
+ #ourIdentity {
+   display: flex;
+ }
+
+
+ #ourIdentityImage, #ourIdentityPoints {
+   width: 50%;
+ }
+ /* Just another way to write the above code
+ #ourIdentity > div {
+   width: 50%;
+ }
+ */
+
+
+ #ourIdentityImage {
+   background-image: url(./images/ourIdentity.jpeg);
+   background-repeat: none;
+   background-size: cover;
+ }
+
+
+ #ourIdentityPoints {
+   display: flex;
+   flex-flow: row wrap;
+   justify-content: center;
+   gap: 90px;
+   padding: 80px 0 60px;
+   background-color: #fcf7f4;
+ }
+
+
+ #ourIdentityPoints > div {
+   width: 250px;
+ }
+
+
+ #ourIdentityPoints h2 {
+   font-size: 19px;
+   text-transform: uppercase;
+   margin-top: 20px;
+ }
+
+
+ #ourIdentityPoints p {
+   color: grey;
+ }
+
+
+ #ourIdentityPoints img {
+   position: relative;
+   top: 0px;
+   transition: all .2s;
+   cursor: pointer;
+ }
+ #ourIdentityPoints img:hover {
+   position: relative;
+   top: -10px;
+ }
+
+
+ /* ==========================================================================
+    People Behind
+    ========================================================================== */
+ #peopleBehind {
+   position: relative;
+   padding: 140px 0;
+   text-align: center;
+ }
+
+
+ #peopleBehind h2 {
+   margin-top: 24px;
+   font-size: 35px;
+   text-transform: uppercase;
+ }
+
+
+ #peopleBehindList {
+   display: flex;
+   margin-top: 40px;
+   justify-content: center;
+   gap: 100px;
+ }
+
+
+ #peopleBehindList img {
+   height: 560px;
+ }
+
+
+ #peopleBehindList h4 {
+   text-transform: uppercase;
+   font-size: 19px;
+   margin-top: 30px;
+   margin-bottom: 6px;
+ }
+
+
+ #peopleBehindList p {
+   color: grey;
+ }
+
+
+ #peopleBehind:after {
+   content: '';
+   display: block;
+   background-image: url(./images/product_bottom.jpeg);
+   width: 100%;
+   height: 8px;
+   position: absolute;
+   bottom: 0;
+   left: 0;
+ }
+
+
+ /* ==========================================================================
+    Footer
+    ========================================================================== */
+ footer {
+   display: flex;
+   justify-content: center;
+   gap: 10px;
+   padding: 100px 0;
+   background-color: #fcf7f4;
+ }
+
+
+ footer > section {
+   width: 18%;
+ }
+
+
+ #logoFooter img {
+   margin-bottom: 20px;
+ }
+
+
+ #logoFooter p {
+   width: 220px;
+   color: grey;
+   font-size: 15px;
+ }
+
+
+ footer h5 {
+   text-transform: uppercase;
+ }
+
+
+ footer p {
+   color: rgba(0,0,0,.7);
+   margin-bottom: 4px;
+   font-size: 15px;
+ }
+
+
+ footer section:last-child img {
+   margin-right:5px;
+ }
